fixed overflowing elements

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -266,15 +266,11 @@ body{
 .student-dashboard{
 	width: 100%;
 	height: 100%;
-
-	max-height: fit-content;
 }
 
 .student-dashboard-info-box, .student-dashboard-sched-box {
 	width: 80%;
 	max-width: 1000px;
-
-	height: fit-content;
 
 	background-color: white;
 	color: var( --text-color );
